# Qt_MVC

./: CMakeLists.txt  Main.qml  README.md  listcontroller.cpp  listcontroller.h  main.cpp
